--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "i18n-editor",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -17,8 +18,11 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "autoprefixer": "^10.4.17",
     "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.4.35",
     "prettier": "^3.1.1",
@@ -31,9 +35,5 @@
     "tw-colors": "^3.3.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@types/jsonwebtoken": "^9.0.6"
   }
 }
