--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.17",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
+    "flowbite-svelte-icons": "2.0.0-next.1",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.4.35",
     "prettier": "^3.1.1",
