--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
   },
   "devDependencies": {
     "@prisma/client": "5.10.2",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/adapter-vercel": "^5.1.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/kit": "^2.5.2",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.18",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.5.1",
     "flowbite-svelte-icons": "2.0.0-next.1",
     "jsonwebtoken": "^9.0.2",
     "postcss": "^8.4.35",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.2",
     "prisma": "^5.10.2",
-    "svelte": "^5.0.0-next.1",
-    "svelte-check": "^3.6.0",
+    "svelte": "5.0.0-next.72",
+    "svelte-check": "^3.6.6",
     "tailwindcss": "^3.4.1",
-    "tslib": "^2.4.1",
+    "tslib": "^2.6.2",
     "tw-colors": "^3.3.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.1.5"
   }
 }
