--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "flowbite-svelte-icons": "2.0.0-next.1",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
